--- a/config/train.yaml
+++ b/config/train.yaml
@@ -4,12 +4,12 @@ log:
 
 
 arcface:
-  chkpt_path: 'Arcface.pth'
+  chkpt_path: '/ARCFACE/Arcface.pth'
   vector_size: 256
 
 data:
-  dataset_dir: ''
-  valset_dir: ''
+  dataset_dir: '/TRAINDATA'
+  valset_dir: '/VALDATA'
 
 model:
   learning_rate_E_G: 4e-4
@@ -18,7 +18,7 @@ model:
   beta1: 0
   beta2: 0.999
 
-  batch_size: 16
+  batch_size: 8
 
-  num_workers: 16
+  num_workers: 8
   grad_clip: 0.0
